[package]
name = "tus_async_client"
version = "0.1.0"
authors = ["Ilya Volchenkov <lzhepelmen@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust native async client library to interact with *tus* enabled endpoints."
keywords = ["tus", "upload", "resumable", "async"]
repository = "https://github.com/rambus-dumbledore/tus_async_client"
readme = "README.md"

[dependencies]
base64 = "=0.10.1"
reqwest = "=0.11.3"